--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+fastapi = "^0.115.6"
+uvicorn = "^0.34.0"
+jinja2 = "^3.1.4"
+python-multipart = "^0.0.20"
+alembic = "^1.14.0"
+asyncpg = "^0.30.0"
+psycopg2 = "^2.9.10"
+redis = "^5.2.1"
+types-redis = "^4.6.0.20241004"
 
 
 [tool.poetry.group.dev.dependencies]
