--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.30.0"
 psycopg2 = "^2.9.10"
 redis = "^5.2.1"
 types-redis = "^4.6.0.20241004"
+greenlet = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
